--- a/LAB1/Style.css
+++ b/LAB1/Style.css
@@ -1,15 +1,15 @@
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    background-image: url("css\ imagem\ fundo.jpg");
+    background-size: cover;
+    background-position: right top;
+
 }
 
-.container {
-    width: 80%; 
-    max-width: 800px; 
-    margin: 0 auto; 
-    text-align: center; 
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    margin-top: 100px;
+    opacity: 0.7;
 }
+
