--- a/LAB1/Style.css
+++ b/LAB1/Style.css
@@ -10,6 +10,25 @@ h1 {
     color: white;
     font-size: 50px;
     margin-top: 100px;
-    opacity: 0.7;
+    opacity: 0.9;
+}
+
+.botao-voltar {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
 
