--- a/LAB 2/Style.css
+++ b/LAB 2/Style.css
@@ -16,6 +16,12 @@ body {
     margin-right: 10px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .nav-link:hover {
   color: #ffffff; 
   background-color: rgba(0, 0, 0, 0.1);
